--- a/html/as.html
+++ b/html/as.html
@@ -125,7 +125,7 @@ A/S는 택배수거로 진행되며 방문A/S 및 출장 A/S는 지원하지 않
        <div>
         <ol>
           <img src="../image/청소기모델.png" alt="청소기모델확인" width="300px">
-          <div style="font-size: 0.9em;">위 이미지 외의 다른 모델(BA2234,다른 비쎌모델)의 경우 A/S가 <br>불가능하며 해당 구매처를 통하여 A/S 접수해주시길 바랍니다.</div>
+          <div style="font-size: 0.9em;">위 이미지 외의 다른 모델(BA2234,다른 비쎌모델)의 경우 A/S가 불가능하며 해당 구매처를 통하여 A/S 접수해주시길 바랍니다.</div>
           <br>
         </ol>
 
